--- a/package.json
+++ b/package.json
@@ -9,6 +9,26 @@
   "author": "hometown",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.4.3"
+    "@antfu/eslint-config": "^2.9.0",
+    "@unocss/eslint-config": "^0.58.6",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-format": "^0.1.0",
+    "lint-staged": "^15.2.2",
+    "simple-git-hooks": "^2.11.0",
+    "typescript": "^5.4.3",
+    "unocss": "^0.58.6",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "unplugin-vue-router": "^0.8.5",
+    "vite": "^5.2.2",
+    "vite-plugin-vue-layouts": "^0.11.0",
+    "vitest": "^1.4.0",
+    "vue-tsc": "^2.0.7"
+  },
+  "dependencies": {
+    "pinia": "^2.1.7",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   }
 }
