--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "hometsse",
-  "version": "0.0.1",
-  "description": "Homesse h5 is a powerful Vue3 h5 template that allows you to quickly create a high-quality web project with built-in and rich plugins and configurations, including collaborative development configurations. Special thanks to Antfu",
   "type": "module",
+  "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@8.15.4",
-  "scripts": {},
+  "description": "Homesse h5 is a powerful Vue3 h5 template that allows you to quickly create a high-quality web project with built-in and rich plugins and configurations, including collaborative development configurations. Special thanks to Antfu",
   "author": "hometown",
   "license": "ISC",
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
+  },
+  "dependencies": {
+    "pinia": "^2.1.7",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^2.9.0",
     "@unocss/eslint-config": "^0.58.6",
@@ -25,10 +33,5 @@
     "vite-plugin-vue-layouts": "^0.11.0",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.7"
-  },
-  "dependencies": {
-    "pinia": "^2.1.7",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
   }
 }
