--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "license": "ISC",
   "scripts": {
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "postinstall": "npx simple-git-hooks",
+    "sizecheck": "npx vite-bundle-visualizer"
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -24,12 +26,14 @@
     "eslint-plugin-format": "^0.1.0",
     "lint-staged": "^15.2.2",
     "simple-git-hooks": "^2.11.0",
+    "taze": "^0.13.3",
     "typescript": "^5.4.3",
     "unocss": "^0.58.6",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-router": "^0.8.5",
     "vite": "^5.2.2",
+    "vite-bundle-visualizer": "^1.0.1",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.7"
