--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
   "author": "hometown",
   "license": "ISC",
   "scripts": {
+    "dev": "cross-env vite --mode=development",
+    "build": "cross-env vite build --mode=production",
+    "build:test": "cross-env vite build --mode=test",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "test": "vitest",
+    "preview-https": "serve dist",
+    "typecheck": "vue-tsc --noEmit",
     "postinstall": "npx simple-git-hooks",
     "sizecheck": "npx vite-bundle-visualizer"
   },
@@ -24,6 +29,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.0",
+    "https-localhost": "^4.7.1",
     "lint-staged": "^15.2.2",
     "simple-git-hooks": "^2.11.0",
     "taze": "^0.13.3",
@@ -37,5 +43,11 @@
     "vite-plugin-vue-layouts": "^0.11.0",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.7"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
